--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
      <!-- Latest News Section Ends Here -->
 
      <!-- Happy Clients says Section Starts Here -->
-     <section class="mt-5 mb-5">
+     <section class="mt-5 mb-5 ps-5 pe-5 w-95">
       <h1 class="text-center fw-bold py-5">Happy <span class="text-danger">Clients says</span></h1>
 
-      <div class="row row-cols-1 row-cols-md-3 g-1">
+      <div class="happy-clinet row row-cols-1 row-cols-md-3 g-1">
         <div class="col">
           <div class="card">
             <img src="images/user-1.png" class="mt-3 w-25 mx-auto card-img-top" alt="...">
